--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -7,6 +7,9 @@ jobs:
     name: Lint code base
     runs-on: ubuntu-latest
     steps:
+      - run: ls -la
+        working-directory: ${{ github.workspace }}/tmp
+
       - name: Checkout code
         uses: actions/checkout@v2
 
